--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,126 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+}
+
+.App-header {
+	background-color: #edf1f5;
+	color: #515152;
+	display: flex;
+	align-items: center;
+	height: 64px;
+}
+
+.App-header h3 {
+	margin-left: 20px;
+}
+
+.App-main {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	padding: 16px;
+	background-color: #edf1f5;
+	overflow: auto;
+}
+
+.Chat-messages {
+	overflow-y: auto;
+	flex: 1;
+	margin-bottom: 16px;
+	border: 1px solid #ccc;
+	background-color: #edf1f5;
+	padding: 16px;
+	border-radius: 16px;
+	scroll-behavior: smooth;
+}
+
+.message-box {
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-direction: row;
+	margin-bottom: 5px;
+}
+
+.Chat-user-logo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	/* background-color: green; */
+	color: #ffffff;
+	margin-right: 20px;
+}
+
+.Chat-message {
+	display: flex;
+	max-width: 80%;
+	justify-content: flex-start;
+	margin-bottom: 8px;
+	flex-direction: column;
+}
+
+.Chat-message-username {
+	font-weight: bold;
+	margin-right: 8px;
+}
+
+.message-text-like {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+}
+
+.Chat-message-text {
+	display: flex;
+	border: 1px solid #ccc;
+	background-color: #ffffff;
+	border-radius: 0px 16px 16px 16px;
+	padding: 16px;
+	margin-right: 8px;
+	text-align: justify;
+}
+
+.Chat-message-like {
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	padding: 0;
+	margin: 0;
+	font-size: 14px;
+	color: #007bff;
+	width: 50px;
+}
+
+.Chat-input {
+	display: flex;
+	align-items: center;
+}
+
+.Chat-input input {
+	flex: 1;
+	border: 1px solid #ccc;
+	background-color: #edf1f5;
+	border-radius: 16px;
+	padding: 8px;
+	/* margin-right: 4px; */
+}
+
+.Chat-input button {
+	background-color: #007bff;
+	color: white;
+	border: none;
+	border-radius: 16px;
+	padding: 8px 8px;
+	cursor: pointer;
 }
